fix horizontal alignment of RestaurantList

--- a/src/Containers/RestaurantList/RestaurantList.scss
+++ b/src/Containers/RestaurantList/RestaurantList.scss
@@ -11,7 +11,6 @@
     
     &__header {
         margin-bottom: 2rem;
-        margin-left: 2rem;
 
         font-size: 5rem;
         font-weight: 400;
@@ -30,12 +29,13 @@
         box-sizing: border-box;
 
         height: 25rem;
-        padding: 1.5rem 2rem;
+        margin-bottom: 5rem;
 
-        border: 4px solid transparent;
+        outline: 4px solid transparent;
+        outline-offset: 2rem;
 
         &:hover {
-            border: 4px solid var(--color-primary);
+            outline: 4px solid var(--color-primary);
         }
 
         &--wide {
